Returns MalloyResult/ModelInfo instead of QueryResult/ModelDef
