# packages/server/src/controller/query.controller.ts
@@ -1,3 +1,4 @@
+import { modelDefToModelInfo, queryResultToMalloyResult } from "@malloydata/malloy";
 import { components } from "../api";
 import { ModelNotFoundError } from "../errors";
 import { ProjectStore } from "../service/project_store";
@@ -26,9 +27,19 @@ export class QueryController {
       if (!model) {
          throw new ModelNotFoundError(`${modelPath} does not exist`);
       } else {
-         await model.getQueryResults(sourceName, queryName, query);
-
-         return {};
+         const { result, modelInfo, dataStyles } =
+            await model.getQueryResults(sourceName, queryName, query);
+         // const result = queryResultToMalloyResult(
+         //    modelInfo,
+         //    queryResults?._queryResult,
+         // );
+         return {
+            dataStyles: JSON.stringify(dataStyles),
+            // modelDef: JSON.stringify(modelDef),
+            modelInfo: JSON.stringify(modelInfo),
+            // queryResult: JSON.stringify(queryResults?._queryResult),
+            result: JSON.stringify(result),
+         } as ApiQuery;
       }
    }
 }
